# azihsm-sdk

./: Cargo.toml
.cargo/: audit.toml
.config/: nextest.toml
api/tests/: Cargo.toml  build.rs
api/tests/cpp/: CMakeLists.txt  partition_tests.cpp
api/tests/cpp/algo/aes/: cbc_enc_dec_tests.cpp  keygen_tests.cpp
api/tests/cpp/algo/ecc/: keygen_tests.cpp  keyreport_tests.cpp  sign_verify_tests.cpp  unwrap_property_tests.cpp  unwrap_semantic_tests.cpp  unwrap_tests.cpp
api/tests/cpp/algo/kdf/: kbkdf_tests.cpp
api/tests/cpp/algo/secret/: unmask_tests.cpp
api/tests/cpp/algo/sha/: digest_tests.cpp
api/tests/cpp/utils/: kdf_derive.cpp  kdf_derive.hpp  resiliency_config.cpp  resiliency_config.hpp
api/tests/src/: partition_tests.rs
api/tests/src/algo/aes/: cbc_tests.rs  xts_tests.rs
api/tests/src/algo/rsa/: common.rs  enc_tests.rs  hash_sign_tests.rs  key_prop_tests.rs  key_tests.rs  mod.rs  nist_tests.rs  sign_tests.rs
ddi/tbor/derive/: Cargo.toml
ddi/tbor/derive/src/: lib.rs  parse.rs
ddi/tbor/test_helpers/: Cargo.toml
ddi/tbor/test_helpers/src/: fixtures.rs  lib.rs
ddi/tbor/test_helpers/src/session/: change_psk.rs  close_session.rs  crypto.rs  finish.rs  init.rs  mod.rs
ddi/tbor/types/: Cargo.toml
ddi/tbor/types/src/: change_psk.rs  close_session.rs  get_api_rev.rs  lib.rs  open_session_finish.rs  open_session_init.rs  part_info.rs  part_init.rs  status.rs
ddi/tbor/types/tests/: README.md  SPEC_COVERAGE.md  azihsm_ddi_tbor_tests.rs
ddi/tbor/types/tests/commands/: change_psk.rs  close_session.rs  default_psk_gate.rs  forward_compat.rs  fw_error_decode.rs  get_api_rev.rs  mod.rs  open_session.rs  part_info.rs  unexpected_toc_type.rs
ddi/tbor/types/tests/commands/part_init/: crypto_rejects.rs  fw_rejects.rs  happy_path.rs  mod.rs
ddi/tbor/types/tests/harness/: api_rev.rs  assertions.rs  ctx.rs  fixture.rs  mod.rs  session.rs  session_guard.rs
ddi/tbor/types/tests/harness/session/: change_psk.rs  crypto.rs  finish.rs  init.rs  part_init.rs
ddi/tbor/types/tests/integration/: change_psk.rs  close_session.rs  default_psk_gate.rs  fw_error_decode.rs  get_api_rev.rs  mod.rs  open_session.rs  session_smoke.rs
ddi/tbor/types/tests/integration/common/: assertions.rs  fixture.rs  mod.rs
fw/core/crypto/key-masking/: Cargo.toml
fw/core/crypto/key-masking/src/: lib.rs
fw/core/crypto/key-masking/src/aead/: decode.rs  encode.rs  format.rs  mod.rs
fw/core/crypto/key-masking/src/cbc/: decode.rs  encode.rs  format.rs  mod.rs
fw/core/crypto/key-report/: Cargo.toml
fw/core/crypto/key-report/src/: builder.rs  lib.rs  template.rs
fw/core/crypto/key-report/tests/: byte_identity.rs
fw/core/crypto/x509-chain/: Cargo.toml
fw/core/crypto/x509-chain/src/: ecdsa.rs  lib.rs  parse.rs  types.rs  validate.rs
fw/core/ddi/tbor/api/: Cargo.toml
fw/core/ddi/tbor/api/examples/: comprehensive.rs
fw/core/ddi/tbor/api/tests/: compile_tests.rs  derive_tests.rs
fw/core/ddi/tbor/types/: Cargo.toml
fw/core/ddi/tbor/types/src/: change_psk.rs  close_session.rs  lib.rs  open_session_finish.rs  open_session_init.rs  part_info.rs  part_init.rs  policy.rs
fw/core/lib/: Cargo.toml
fw/core/lib/src/: io.rs  lib.rs  op.rs  part_state.rs  session.rs
fw/core/lib/src/ddi/mbor/: aes_encrypt_decrypt.rs  aes_generate_key.rs  close_session.rs  delete_key.rs  ecc_generate_key_pair.rs  ecc_sign.rs  ecdh_key_exchange.rs  establish_credential.rs  from_ddi.rs  from_pal.rs  get_device_info.rs  get_establish_cred_encryption_key.rs  get_sealed_bk3.rs  get_session_encryption_key.rs  hkdf_derive.rs  hmac.rs  init_bk3.rs  kbkdf_derive.rs  kdf.rs  key_attrs.rs  mod.rs  open_session.rs  set_sealed_bk3.rs  sha_digest.rs
fw/core/lib/src/ddi/tbor/: change_psk.rs  close_session.rs  get_api_rev.rs  mod.rs  open_session_finish.rs  open_session_init.rs  part_info.rs  part_init.rs  policy.rs
fw/plat/std/pal/: Cargo.toml
fw/plat/std/pal/src/: buf_pool.rs  cert.rs  ecc.rs  gdma.rs  hash.rs  hmac.rs  kdf.rs  part.rs  session.rs  vault.rs
fw/plat/std/pal/src/drivers/: ecc.rs  kdf.rs  session.rs  vault.rs
fw/plat/uno/fw/: Cargo.toml
fw/plat/uno/fw/.cargo/: config.toml
fw/plat/uno/fw/app/: Cargo.toml
fw/plat/uno/fw/app/src/: main.rs
fw/plat/uno/fw/crates/fault/: Cargo.toml
fw/plat/uno/fw/crates/fault/src/: decode.rs  lib.rs
fw/plat/uno/fw/crates/key_vault/: Cargo.toml
fw/plat/uno/fw/crates/key_vault/src/: block.rs  entry.rs  kind.rs  lib.rs  storage.rs  tests.rs  vault.rs
fw/plat/uno/fw/drivers/aes/src/: api.rs
fw/plat/uno/fw/drivers/pac/src/: pac.rs
fw/plat/uno/fw/drivers/part_store/src/: part_store.rs
fw/plat/uno/fw/drivers/session_store/: Cargo.toml
fw/plat/uno/fw/drivers/session_store/src/: lib.rs  session_store.rs
fw/plat/uno/fw/drivers/sha/src/: api.rs
fw/plat/uno/fw/drivers/vault/: Cargo.toml
fw/plat/uno/fw/drivers/vault/src/: lib.rs
fw/plat/uno/fw/pal/: Cargo.toml
fw/plat/uno/fw/pal/src/: gdma.rs  ipc.rs  pal.rs  part.rs  session.rs  vault.rs
fw/plat/uno/fw/reg/soc/src/: io_gsram.rs  key_vault_table_t.rs  lib.rs  sha.rs
plugins/ossl_engine/engine/: Cargo.toml
plugins/ossl_engine/engine/src/: lib.rs
plugins/ossl_engine/openssl-engine/: Cargo.toml
plugins/ossl_engine/openssl-engine/src/: engine.rs  lib.rs
plugins/ossl_engine/openssl-sys-engine/: Cargo.toml  build.rs  wrapper.h
plugins/ossl_engine/openssl-sys-engine/src/: lib.rs
plugins/ossl_prov/integration-tests/openssl-capi/: Cargo.toml  build.rs
plugins/ossl_prov/integration-tests/openssl-capi/cpp/: CMakeLists.txt  main.cpp  openssl_capi_integration_tests.rs  smoke_tests.cpp
plugins/ossl_prov/integration-tests/openssl-capi/cpp/algo/digest/: digest_tests.cpp
plugins/ossl_prov/integration-tests/openssl-capi/cpp/utils/: keygen_helpers.hpp  ossl_helpers.hpp  provider_ctx.hpp
plugins/ossl_prov/integration-tests/openssl-cli/: .gitignore  Cargo.toml
plugins/ossl_prov/integration-tests/openssl-cli/src/: openssl_cli_tests.rs
plugins/ossl_prov/integration-tests/openssl-cli/testfiles/: env.sh
plugins/ossl_prov/integration-tests/openssl-cli/testfiles/digest/: digest.sh
(+291 files in other folders)
