# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "azihsm_api_tests"
version = "0.0.0"

[dependencies]
azihsm_res_test_dev = { optional = true, workspace = true }

[build-dependencies]
anyhow.workspace = true
cmake.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
xshell.workspace = true

[dev-dependencies]
azihsm_api.workspace = true
azihsm_api_tests_macro.workspace = true
azihsm_crypto = { features = ["testvectors"], workspace = true }
azihsm_resiliency_test_helpers.workspace = true
hex.workspace = true
libtest-mimic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

[features]
default = []
mock = ["azihsm_api/mock"]
res-test = ["azihsm_api/res-test", "dep:azihsm_res_test_dev"]

[lints]
workspace = true

[[test]]
harness = false
name = "cpp"
path = "cpp/tests.rs"
