# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_tbor_derive"
version = "0.1.0"

# Host-side `#[tbor]` attribute macro.  Mirrors the attribute spelling
# of `azihsm_fw_ddi_tbor_derive` but emits owned host wrappers
# (`Default` + `TborOpReq` / `TborResp` impls) that delegate to the
# firmware-side zero-copy typestate encoder/decoder.
#
# This crate is pure proc-macro: no runtime deps, no link to firmware
# crates — it only transforms tokens.

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { features = ["extra-traits", "full"], workspace = true }

[lints]
workspace = true
