# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_tbor_test_helpers"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_test_helpers.workspace = true
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_types.workspace = true
azihsm_fw_hsm_pal_traits.workspace = true
x509.workspace = true

[lints]
workspace = true
