# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_tbor_types"
version = "0.1.0"

[dependencies]
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_derive.workspace = true
open-enum.workspace = true

[dev-dependencies]
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_sim.workspace = true
azihsm_ddi_mbor_test_helpers.workspace = true
azihsm_ddi_mbor_types.workspace = true
minicbor = { features = ["derive"], workspace = true }
parking_lot.workspace = true
x509.workspace = true

[lib]
doctest = false

[[test]]
name = "azihsm_ddi_tbor_tests"
path = "tests/azihsm_ddi_tbor_tests.rs"

[features]
# Forward backend selection to the azihsm_ddi facade so the integration
# test binary picks up the right backend (emu vs mock). Mirrors the
# pattern used in ddi/mbor/types/Cargo.toml.
emu = ["azihsm_ddi/emu"]
mock = ["azihsm_ddi/mock"]
table-4 = ["azihsm_ddi/table-4"]
table-64 = ["azihsm_ddi/table-64"]

[lints]
workspace = true
