# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "openssl-engine"
publish = false
version = "0.1.0"

[features]
default = []
engine = ["openssl-sys-engine/engine"]

[dependencies]
openssl-sys-engine.workspace = true

[lints]
workspace = true
