# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "openssl-sys-engine"
publish = false
version = "0.1.0"

[features]
default = []
engine = []

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen.workspace = true
pkg-config.workspace = true

[lints]
workspace = true
