# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_fw_core_crypto_key_report"
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[dependencies]
azihsm_fw_hsm_pal_traits = { workspace = true }
bitfield-struct.workspace = true

[dev-dependencies]
minicbor = { features = ["derive", "std"], workspace = true }

[lints]
workspace = true
