# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
edition = "2021"
name = "azihsm_fw_core_crypto_x509_chain"
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[dependencies]
azihsm_fw_hsm_pal_traits = { workspace = true }
der = { default-features = false, features = ["oid"], version = "0.8" }
