# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
edition = "2021"
name = "azihsm_fw_hsm_pal_std"
version = "0.1.0"

[dependencies]
async-channel.workspace = true
azihsm_crypto.workspace = true

azihsm_fw_hsm_core_tracing.workspace = true
azihsm_fw_hsm_pal_traits.workspace = true
azihsm_fw_hsm_std_x509.workspace = true
embassy-sync.workspace = true
tokio = { features = ["rt", "sync", "time"], workspace = true }

[dev-dependencies]
hex.workspace = true
tokio = { features = ["macros", "rt", "sync", "time"], workspace = true }
