# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "provider-integration-tests-capi"
version = "0.0.0"

[features]
integration = []

[build-dependencies]
cmake.workspace = true

[dev-dependencies]
libtest-mimic.workspace = true

[lints]
workspace = true

[[test]]
harness = false
name = "openssl_capi_integration_tests"
path = "cpp/openssl_capi_integration_tests.rs"
