# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
description = "DDI request/response schema types with TBOR-derived encoders and decoders"
edition = "2021"
name = "azihsm_fw_ddi_tbor_types"
version = "0.1.0"

[lib]
bench = false
doctest = false

[dependencies]
azihsm_fw_ddi_tbor.workspace = true
azihsm_fw_ddi_tbor_api.workspace = true
azihsm_fw_hsm_pal_traits.workspace = true
open-enum.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
